# hello-axum

./: .gitignore  Cargo.toml  Makefile  README.md
mk/: app.mk  cargo.mk  psql.mk  sqlx.mk
mk/.artefacts/.logs/: hello-axum
src/: errors.rs  handlers.rs  main.rs
tests/: hello.rs
tutorial/: axum.md
