[package]
name = "hello-axum"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7.4", features = ["macros"]}
axum-extra = { version = "0.9.3", features = ["typed-header"]}
env_logger = { version = "0.11.2" }
log = { version =  "0.4.20" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
sqlx = { version = "0.7.3" , default_features = false, features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"]}
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
httpc-test = "0.1.9"
reqwest = "0.11.24"
